@@ -4051,17 +4051,17 @@ Save changes?</source>
 <context>
     <name>MidiControllerModel</name>
     <message>
-        <location filename="../midiwidget.cpp" line="83"/>
+        <location filename="../midiwidget.cpp" line="84"/>
         <source>Module</source>
         <translation>Module</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="84"/>
+        <location filename="../midiwidget.cpp" line="85"/>
         <source>MIDI Controller / Parameter</source>
         <translation>Contrôleur MIDI / Paramètre</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="70"/>
+        <location filename="../midiwidget.cpp" line="71"/>
         <source>Type: %1 Channel: %2 Param: %3</source>
         <translation>Type: %1 Canal: %2 Param: %3</translation>
     </message>
@@ -4069,102 +4069,102 @@ Save changes?</source>
 <context>
     <name>MidiWidget</name>
     <message>
-        <location filename="../midiwidget.cpp" line="264"/>
+        <location filename="../midiwidget.cpp" line="265"/>
         <source>&amp;Log</source>
         <translation>&amp;Log</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="270"/>
+        <location filename="../midiwidget.cpp" line="271"/>
         <source>Set Mi&amp;n</source>
         <translation>Définir Mi&amp;n</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="275"/>
+        <location filename="../midiwidget.cpp" line="276"/>
         <source>Set Ma&amp;x</source>
         <translation>Définir Ma&amp;x</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="280"/>
+        <location filename="../midiwidget.cpp" line="281"/>
         <source>&amp;Reset Min/Max</source>
         <translation>&amp;Réinitialiser Min/Max</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="293"/>
+        <location filename="../midiwidget.cpp" line="294"/>
         <source>Omni</source>
         <translation>Omni</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="302"/>
+        <location filename="../midiwidget.cpp" line="303"/>
         <source>MIDI C&amp;hannel:</source>
         <translation>Canal &amp;MIDI:</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="316"/>
+        <location filename="../midiwidget.cpp" line="317"/>
         <source>Add to &amp;Parameter View</source>
         <translation>Ajouter à la Vue &amp;Paramètres</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="329"/>
+        <location filename="../midiwidget.cpp" line="330"/>
         <source>&amp;Enable note events</source>
         <translation>Activer les &amp;Evênements de Notes</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="332"/>
+        <location filename="../midiwidget.cpp" line="333"/>
         <source>&amp;Follow Configuration Dialog</source>
         <translation>Suivre &amp;Fenêtre de Configuration</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="335"/>
+        <location filename="../midiwidget.cpp" line="336"/>
         <source>Follow &amp;MIDI</source>
         <translation>Suivre entrée &amp;MIDI</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="339"/>
+        <location filename="../midiwidget.cpp" line="340"/>
         <source>&amp;Bind</source>
         <translation>&amp;Relier</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="344"/>
+        <location filename="../midiwidget.cpp" line="345"/>
         <source>&amp;Clear Binding</source>
         <translation>&amp;Séparer</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="349"/>
+        <location filename="../midiwidget.cpp" line="350"/>
         <source>Clear &amp;All</source>
         <translation>&amp;Tout Séparer</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="353"/>
+        <location filename="../midiwidget.cpp" line="354"/>
         <source>&amp;Toggle MIDI Sign</source>
         <translation>&amp;Inverser Signe MIDI</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="504"/>
+        <location filename="../midiwidget.cpp" line="505"/>
         <source>This will erase all presets for this configuration. Continue?</source>
         <translation>Ceci effacera tous les presets pour cette configuration. Continuer?</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="515"/>
+        <location filename="../midiwidget.cpp" line="516"/>
         <source>Add this parameter to frame:</source>
         <translation>Ajouter ce paramètre au cadre:</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="530"/>
+        <location filename="../midiwidget.cpp" line="531"/>
         <source>Frame &apos;%1&apos; does not exist. Create?</source>
         <translation>Le cadre &apos;%1&apos; n&apos;existe pas. Créer?</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="537"/>
+        <location filename="../midiwidget.cpp" line="538"/>
         <source>Add frame to tab:</source>
         <translation>Ajouter le cadre à l&apos;onglet:</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="551"/>
+        <location filename="../midiwidget.cpp" line="552"/>
         <source>Tab &apos;%1&apos; does not exist. Create?</source>
         <translation>L&apos;onglet &apos;%1&apos; n&apos;existe pas. Créer?</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="577"/>
+        <location filename="../midiwidget.cpp" line="578"/>
         <source>Parameter name:</source>
         <translation>Nom du paramètre:</translation>
     </message>
@@ -4243,12 +4243,12 @@ Save changes?</source>
 <context>
     <name>ModuleModel</name>
     <message>
-        <location filename="../midiwidget.cpp" line="179"/>
+        <location filename="../midiwidget.cpp" line="180"/>
         <source>MIDI Sign</source>
         <translation>Signe MIDI</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="179"/>
+        <location filename="../midiwidget.cpp" line="180"/>
         <source>Module / Parameter</source>
         <translation>Module / Paramètre</translation>
     </message>
