@@ -1,6 +1,8 @@
 2012-10-19 Guido Scholz <guido.scholz@bayernline.de>
 	* src/mainwindow.*: Add file menu item to open demo instruments 
 	directly.
+	* src/midiwidget.*: Make visibility, position and size of midi
+	widget window persistent.
 
 2012-10-04 Guido Scholz <guido.scholz@bayernline.de>
 	* demos/vocoder_1.ams: Add demo file for new vocoder module.
